# gsmenu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  drm_box.c  gsmenu.eez-project  gsmenu.eez-project-ui-state  lv_conf.h  lvgl-patches.patch  main.c  wifi_list.txt
src/actions/: buttons.c
src/input/: input.c  input.h
src/ui/: actions.h  air_camera.c  air_telemetry.c  air_wfbng.c  air_wfbng.h  demo.c  demo.h  gs_system.c  gs_system.h  gs_telemetry.c  gs_telemetry.h  helper.c  helper.h  msposd.c  msposd.h  screens.c  screens.h  styles.c  styles.h  test.c  test.h  ui.c  ui.h  vars.h  wifi.c  wifi.h
